Return fixedpos containing block (if any) for a fixedpos's offsetParent https://bugs.webkit.org/show_bug.cgi?id=212372 rdar://63739636

Reviewed by Simon Fraser.

Sometimes an element (such as a transformed element) that is not the viewport
forms the containing block of fixed positioned descendants. In this case,
offsetParent should return that box.

See spec: https://www.w3.org/TR/cssom-view/#dom-htmlelement-offsetparent

* LayoutTests/imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-fixed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-position-multicol-002.html:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::offsetParent const):

Canonical link: https://commits.webkit.org/300097@main